# template-hugoprocess

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  settings.local.json
agents/greenfield/: api-architect.md  build-crud.md  build-entity-backend.md  build-entity-frontend.md  build-frontend-shell.md  build-jobs.md  build-mockups.md  build-routes.md  build-service.md  build-utils.md  detail-business-logic-entity.md  frontend-architect.md  generate-database.md  reconcile-services.md  schema-architect.md
base/backend/config/: logger.py  requirements.txt
base/frontend/: package-lock.json  package.json
base/frontend-v2/: package-lock.json  package.json
base/tiers/slack/: main.py
fullstack/dashboard/: .gitignore
fullstack/dashboard/backend/: Dockerfile.dev
fullstack/dashboard/frontend/: package-lock.json  package.json  (+1 more)
resources/rules/: backend-architecture-context.md  index.md
resources/scripts/: setup-infrastructure.py
skills/arch-api/: SKILL.md
skills/arch-business-logic/: SKILL.md
skills/arch-frontend/: SKILL.md
skills/arch-schema/: SKILL.md
skills/greenfield-architecture/: SKILL.md
skills/greenfield-build/: SKILL.md
skills/greenfield-deploy/: SKILL.md
skills/greenfield-jobs/: SKILL.md
skills/greenfield-prd/: SKILL.md
skills/greenfield-reference/: SKILL.md
skills/greenfield-research/: SKILL.md
skills/tools-clarify/: SKILL.md
skills/tools-validate/: SKILL.md
tools/telegram/: pyproject.toml  setup.sh
tools/telegram/assets/: config.json
tools/telegram/src/telegram_notifier/: __init__.py  cli.py  client.py
(+210 files in other folders)
