[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "telegram-notifier"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
telegram = "telegram_notifier.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
